--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
+    "@upstash/ratelimit": "^0.4.2",
+    "@upstash/redis": "^1.20.4",
+    "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "framer-motion": "^10.12.4",
+    "fs": "^0.0.1-security",
+    "lru-cache": "^7.12.0",
     "next": "13.3.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "turbo": "^1.9.3",
+    "typescript": "^4.7.4"
   }
 }
